# newsletter-agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  delivery.py  filter.py  formatter.py  orchestrator.py  research.py  writer.py
api/: __init__.py  routes.py
config/: __init__.py  settings.py
database/: __init__.py  db.py
frontend/: __init__.py  components.py  styles.py
tools/: __init__.py  email_tools.py  search_tools.py
